--- a/arte.html
+++ b/arte.html
@@ -138,7 +138,7 @@
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h4 class="text-white text-uppercase mb-md-3">Un viaje al Interior de:</h4>
-                            <h1 class="display-3 text-white mb-md-4">Mackenzie Mack Phillips</h1>
+                            <h1 class="display-3 text-white mb-md-4">Mackenzie Phillips</h1>
                             <a href="https://youtu.be/_rLtfHB4LLc?si=glq56EkzfgUV_lrj" class="btn btn-primary py-md-3 px-md-5 mt-2">Clic para Conocer más</a>
                         </div>
                     </div>
@@ -294,7 +294,7 @@
         </div>
     </div>
 
-<iframe width="1903" height="750" src="https://www.youtube.com/embed/SXwedTjMPqg" title="The Shack: Exclusive Behind the Scenes with Sam Worthington, Octavia Spencer, and Stuart Hazeldine" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="1920" height="1080" src="https://www.youtube.com/embed/SXwedTjMPqg" title="The Shack: Exclusive Behind the Scenes with Sam Worthington, Octavia Spencer, and Stuart Hazeldine" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     
     
     <!-- AQUI FINALIZA EL CONTENIDO ................................... -->
