--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h4 class="text-white text-uppercase mb-md-3">Un viaje al Interior de:</h4>
-                            <h1 class="display-3 text-white mb-md-4">Mackenzie Mack Phillips</h1>
+                            <h1 class="display-3 text-white mb-md-4">Mackenzie Phillips</h1>
                             <a href="https://youtu.be/_rLtfHB4LLc?si=glq56EkzfgUV_lrj" class="btn btn-primary py-md-3 px-md-5 mt-2">Clic para Conocer más</a>
                         </div>
                     </div>
@@ -264,8 +264,11 @@
 <div class="container py-5"> 
 	  <div class="row align-items-center">
 <div class="videoWrapper">
-    <!-- Copy & Pasted from YouTube -->
-    <iframe width="560" height="349" src="https://www.youtube.com/embed/OqcJqsNmVls?si=acT6QhVxW8yiARhf" frameborder="0" allowfullscreen></iframe>
+    
+	
+    <iframe width="100%" height="auto" src="https://www.youtube.com/embed/OqcJqsNmVls?si=acT6QhVxW8yiARhf" frameborder="0" allowfullscreen></iframe>
+	
+	
 </div>
    </div>
 	</div>
