--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 <div class="videoWrapper">
     
 	
-    <iframe width="auto" height="1080" src="https://www.youtube.com/embed/OqcJqsNmVls?si=acT6QhVxW8yiARhf" frameborder="0" allowfullscreen></iframe>
+    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/OqcJqsNmVls?si=acT6QhVxW8yiARhf" frameborder="0" allowfullscreen></iframe>
 	
 	
 </div>
