--- a/index.html
+++ b/index.html
@@ -265,9 +265,9 @@
 	  <div class="row align-items-center">
 <div class="videoWrapper">
     
-	
-    <iframe width="auto" height="100%" src="https://www.youtube.com/embed/OqcJqsNmVls?si=acT6QhVxW8yiARhf" frameborder="0" allowfullscreen></iframe>
-	
+	<div class="contenedor-responsivo">     
+    <iframe class="contenedor-responsivo" src="https://www.youtube.com/embed/OqcJqsNmVls?si=acT6QhVxW8yiARhf" gesture="media" allow="encryted-media" frameborder="0" allowfullscreen></iframe>
+	</div>
 	
 </div>
    </div>
