--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 			 </div>
 		 
 <div class="container py-5"> 
-	  <div class="row align-items-center">
+	  <div class="row align-items-fullscreen">
 
     
 	<div class="contenedor-responsivo">     
