--- a/arte.html
+++ b/arte.html
@@ -293,9 +293,11 @@
      </div>
         </div>
     </div>
+
+
 <div class="contenedor-responsivo">     
-<iframe width="1920" height="1080" src="https://www.youtube.com/embed/SXwedTjMPqg" title="The Shack: Exclusive Behind the Scenes with Sam Worthington, Octavia Spencer, and Stuart Hazeldine" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</div>
+    <iframe class="contenedor-responsivo" src="https://www.youtube.com/embed/OqcJqsNmVls?si=acT6QhVxW8yiARhf" gesture="media" allow="encryted-media" frameborder="0" allowfullscreen></iframe>
+	</div>
     
     <!-- AQUI FINALIZA EL CONTENIDO ................................... -->
    
