--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@
 		 
 
     
-	<div class="contenedor-responsivo">     
-    <iframe class="contenedor-responsivo" src="https://www.youtube.com/embed/OqcJqsNmVls?si=acT6QhVxW8yiARhf" gesture="media" allow="encryted-media" frameborder="0" allowfullscreen></iframe>
+	<div class="container">     
+    <iframe iframe width="560" heigth="315" src="https://www.youtube.com/embed/OqcJqsNmVls?si=acT6QhVxW8yiARhf" frameborder="0" allowfullscreen></iframe>
 	</div>
 
 
