--- a/arte.html
+++ b/arte.html
@@ -295,8 +295,8 @@
     </div>
 
 
-<div class="contenedor-responsivo">     
-    <iframe class="contenedor-responsivo" src="https://www.youtube.com/embed/OqcJqsNmVls?si=acT6QhVxW8yiARhf" gesture="media" allow="encryted-media" frameborder="0" allowfullscreen></iframe>
+<div class="container">     
+    <iframe iframe width="1920" heigth="1080" src="https://www.youtube.com/embed/OqcJqsNmVls?si=acT6QhVxW8yiARhf" frameborder="0" allowfullscreen></iframe>
 	</div>
     
     <!-- AQUI FINALIZA EL CONTENIDO ................................... -->
