--- a/arte.html
+++ b/arte.html
@@ -295,7 +295,7 @@
     </div>
 
 
-<div class="container">     
+<div class="contenedor">     
     <iframe iframe width="1920" heigth="1080" src="https://www.youtube.com/embed/OqcJqsNmVls?si=acT6QhVxW8yiARhf" frameborder="0" allowfullscreen></iframe>
 	</div>
     
