--- a/arte.html
+++ b/arte.html
@@ -295,8 +295,8 @@
     </div>
 
 
-<div class="contenedor">     
-    <iframe width="560" heigth="315" src="https://www.youtube.com/embed/OqcJqsNmVls?si=acT6QhVxW8yiARhf" frameborder="0" allowfullscreen></iframe>
+<div class="contenedor-responsivo">     
+    <iframe class="iframe-responsivo" src="https://www.youtube.com/embed/OqcJqsNmVls?si=acT6QhVxW8yiARhf" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 	</div>
     
     <!-- AQUI FINALIZA EL CONTENIDO ................................... -->
