--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@
 		 
 
     
-	<div class="contenedor">     
-    <iframe width="560" heigth="315" src="https://www.youtube.com/embed/OqcJqsNmVls?si=acT6QhVxW8yiARhf" frameborder="0" allowfullscreen></iframe>
+<div class="contenedor-responsivo">     
+    <iframe class="iframe-responsivo" src="https://www.youtube.com/embed/OqcJqsNmVls?si=acT6QhVxW8yiARhf" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 	</div>
 
 
