--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 
     
 <div class="contenedor-responsivo">     
-    <iframe class="iframe-responsivo" src="https://youtu.be/OqcJqsNmVls?si=0DIsfajbznLCldBm" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <iframe class="iframe-responsivo" src="https://www.youtube.com/embed/OqcJqsNmVls?si=pyJaxVlbFrMuxOIC" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 	</div>
 
 
