--- a/arte.html
+++ b/arte.html
@@ -294,11 +294,8 @@
         </div>
     </div>
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/OqcJqsNmVls?si=1fWj8dXhKFkD2qeL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-<div class="contenedor-responsivo">     
-    <iframe class="iframe-responsivo" src="https://youtu.be/OqcJqsNmVls?si=0DIsfajbznLCldBm" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-	</div>
-    
     <!-- AQUI FINALIZA EL CONTENIDO ................................... -->
    
  
