--- a/arte.html
+++ b/arte.html
@@ -295,7 +295,7 @@
     </div>
 
 <div clas="contendor-responsivo"> 
-<iframe class= "iframe- responsivo" src="https://www.youtube.com/embed/OqcJqsNmVls?si=1fWj8dXhKFkD2qeL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe class= "iframe- responsivo" src="https://www.youtube.com/embed/OqcJqsNmVls?si=1fWj8dXhKFkD2qeL"  frameborder="0" allowfullscreen></iframe>
 </div>   
 
     <!-- AQUI FINALIZA EL CONTENIDO ................................... -->
