--- a/arte.html
+++ b/arte.html
@@ -295,7 +295,7 @@
     </div>
 
 <div clas="contendor-responsivo"> 
-<iframe class= "iframe- responsivo" src="https://www.youtube.com/embed/OqcJqsNmVls?si=1fWj8dXhKFkD2qeL"  frameborder="0" allowfullscreen></iframe>
+<iframe width="100%" height="100%" src="https://www.youtube.com/embed/OqcJqsNmVls?si=1fWj8dXhKFkD2qeL"  frameborder="0" allowfullscreen></iframe>
 </div>   
 
     <!-- AQUI FINALIZA EL CONTENIDO ................................... -->
