--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@
 		 
 
  <div clas="contendor-responsivo"> 
-<iframe class= "iframe- responsivo" src="https://www.youtube.com/embed/OqcJqsNmVls?si=1fWj8dXhKFkD2qeL" frameborder="0" allowfullscreen></iframe>
-</div>   
+<iframe width="100%" height="100%" src="https://www.youtube.com/embed/OqcJqsNmVls?si=1fWj8dXhKFkD2qeL"  frameborder="0" allowfullscreen></iframe>
+</div> 
 
 
     <div class="container-fluid py-5">
