--- a/arte.html
+++ b/arte.html
@@ -294,9 +294,9 @@
         </div>
     </div>
 
-<div clas="contendor-responsivo"> 
-<iframe width="100%" height="100%" src="https://www.youtube.com/embed/OqcJqsNmVls?si=1fWj8dXhKFkD2qeL"  frameborder="0" allowfullscreen></iframe>
-</div>   
+<div clas="contendor"> 
+<iframe width="responsive-iframe" src="https://www.youtube.com/embed/OqcJqsNmVls?si=1fWj8dXhKFkD2qeL"  frameborder="0" allowfullscreen></iframe>
+</div>
 
     <!-- AQUI FINALIZA EL CONTENIDO ................................... -->
    
