--- a/arte.html
+++ b/arte.html
@@ -294,7 +294,7 @@
         </div>
     </div>
 
-<div clas="contendor"> 
+<div clas="contendor-responsive"> 
 <iframe width="responsive-iframe" src="https://www.youtube.com/embed/OqcJqsNmVls?si=1fWj8dXhKFkD2qeL"  frameborder="0" allowfullscreen></iframe>
 </div>
 
