--- a/index.html
+++ b/index.html
@@ -262,9 +262,9 @@
 			 </div>
 		 
 
- <div clas="contendor"> 
+ <div clas="contendor-responsive"> 
 <iframe width="responsive-iframe" src="https://www.youtube.com/embed/OqcJqsNmVls?si=1fWj8dXhKFkD2qeL"  frameborder="0" allowfullscreen></iframe>
-</div> 
+</div>
 
 
     <div class="container-fluid py-5">
