--- a/arte.html
+++ b/arte.html
@@ -294,8 +294,8 @@
         </div>
     </div>
 
-<div clas="contendor-responsive"> 
-<iframe width="responsive-iframe" src="https://www.youtube.com/embed/OqcJqsNmVls?si=1fWj8dXhKFkD2qeL"  frameborder="0" allowfullscreen></iframe>
+<div clas="contendor"> 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/OqcJqsNmVls?si=1fWj8dXhKFkD2qeL"  frameborder="0" allowfullscreen></iframe>
 </div>
 
     <!-- AQUI FINALIZA EL CONTENIDO ................................... -->
