--- a/index.html
+++ b/index.html
@@ -28,6 +28,27 @@
     <link href="css/style.css" rel="stylesheet">
     
     <style>
+		
+		
+		.responsive{ 
+		width: 100%;
+			height: 0;
+			padding-bottom: 56.25%;
+			position: relative;
+			
+		}
+		
+		.responsive iframe{
+		position: absolute;
+			width: 100%;
+			height: 100%;
+			
+		}
+		
+		
+		
+		
+		
 .material-symbols-outlined {
   font-variation-settings:
   'FILL' 0,
@@ -261,11 +282,9 @@
                 <h1>DETRAS DE CÁMARAS</h1>
 			 </div>
 		 
-
-<div clas="contendor"> 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/OqcJqsNmVls?si=1fWj8dXhKFkD2qeL"  frameborder="0" allowfullscreen></iframe>
+<div clas="responsive"> 
+<iframe src="https://www.youtube.com/embed/OqcJqsNmVls?si=1fWj8dXhKFkD2qeL"  frameborder="0" allowfullscreen></iframe>
 </div>
-
 
     <div class="container-fluid py-5">
         <div class="container pt-5 pb-3">
