--- a/arte.html
+++ b/arte.html
@@ -29,20 +29,7 @@
     
     <style>
 		
-		.responsive{ 
-		width: 100%;
-			height: 0;
-			padding-bottom: 56.25%;
-			position: relative;
-			
-		}
 		
-		.responsive iframe{
-		position: absolute;
-			width: 100%;
-			height: 100%;
-			
-		}
 		
 		
 		
@@ -313,7 +300,7 @@
     </div>
 
 <div clas="responsive"> 
-<iframe src="https://www.youtube.com/embed/OqcJqsNmVls?si=1fWj8dXhKFkD2qeL"  frameborder="0" allowfullscreen></iframe>
+<iframe width="560" heigth="360" src="https://www.youtube.com/embed/OqcJqsNmVls?si=1fWj8dXhKFkD2qeL"  frameborder="0" allowfullscreen></iframe>
 </div>
 
     <!-- AQUI FINALIZA EL CONTENIDO ................................... -->
