--- a/index.html
+++ b/index.html
@@ -30,20 +30,7 @@
     <style>
 		
 		
-		.responsive{ 
-		width: 100%;
-			height: 0;
-			padding-bottom: 56.25%;
-			position: relative;
-			
-		}
 		
-		.responsive iframe{
-		position: absolute;
-			width: 100%;
-			height: 100%;
-			
-		}
 		
 		
 		
@@ -283,7 +270,7 @@
 			 </div>
 		 
 <div clas="responsive"> 
-<iframe src="https://www.youtube.com/embed/OqcJqsNmVls?si=1fWj8dXhKFkD2qeL"  frameborder="0" allowfullscreen></iframe>
+<iframe width="560" heigth="360" src="https://www.youtube.com/embed/OqcJqsNmVls?si=1fWj8dXhKFkD2qeL"  frameborder="0" allowfullscreen></iframe>
 </div>
 
     <div class="container-fluid py-5">
