--- a/arte.html
+++ b/arte.html
@@ -300,7 +300,7 @@
     </div>
 
 <div clas="responsive"> 
-<iframe width="560" heigth="360" src="https://www.youtube.com/embed/OqcJqsNmVls?si=1fWj8dXhKFkD2qeL"  frameborder="0" allowfullscreen></iframe>
+<iframe  src="https://www.youtube.com/embed/OqcJqsNmVls?si=1fWj8dXhKFkD2qeL"  frameborder="0" allowfullscreen></iframe>
 </div>
 
     <!-- AQUI FINALIZA EL CONTENIDO ................................... -->
