--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 			 </div>
 		 
 <div clas="responsive"> 
-<iframe class= "responsive" width="560" heigth="315" src="https://www.youtube.com/embed/OqcJqsNmVls?si=1fWj8dXhKFkD2qeL"  frameborder="0" allowfullscreen></iframe>
+<iframe width="560" heigth="315" src="https://www.youtube.com/embed/OqcJqsNmVls?si=1fWj8dXhKFkD2qeL"  frameborder="0" allowfullscreen></iframe>
 </div>
 
     <div class="container-fluid py-5">
