--- a/arte.html
+++ b/arte.html
@@ -288,7 +288,7 @@
                     </div>
        
  <div clas="responsive"> 
-<iframe width="560" heigth="315" src="https://www.youtube.com/embed/OqcJqsNmVls?si=1fWj8dXhKFkD2qeL"  frameborder="0" allowfullscreen></iframe>
+<iframe class="responsive" src="https://www.youtube.com/embed/OqcJqsNmVls?si=1fWj8dXhKFkD2qeL"  frameborder="0" allowfullscreen></iframe>
 </div>
   
     <!-- ARTE End -->
