--- a/arte.html
+++ b/arte.html
@@ -287,9 +287,7 @@
                         </div>
                     </div>
        
- <div clas="responsive"> 
-<iframe class="responsive" src="https://www.youtube.com/embed/OqcJqsNmVls?si=1fWj8dXhKFkD2qeL"  frameborder="0" allowfullscreen></iframe>
-</div>
+<iframe class="embed-responsive" src="https://www.youtube.com/embed/OqcJqsNmVls?si=eQ64Px9YMhTRyWgY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   
     <!-- ARTE End -->
 
