--- a/index.html
+++ b/index.html
@@ -269,9 +269,7 @@
                 <h1>DETRAS DE CÁMARAS</h1>
 			 </div>
 		 
-<div clas="responsive"> 
-<iframe class="responsive" src="https://www.youtube.com/embed/OqcJqsNmVls?si=1fWj8dXhKFkD2qeL"  frameborder="0" allowfullscreen></iframe>
-</div>
+<iframe class="embed-responsive" src="https://www.youtube.com/embed/OqcJqsNmVls?si=eQ64Px9YMhTRyWgY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
     <div class="container-fluid py-5">
         <div class="container pt-5 pb-3">
