--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                             <div class="d-flex justify-content-between mb-3">
                                 <small class="m-0"><span class="material-symbols-outlined"> apparel </span> VESTUARIO</small>    
                             </div>
-                            <a class="h5 text-decoration-none" href=""> <p align="justify"> El director de arte rompe esterotipos dando un aspecto a Dios con una mujer afroamericana, una manifestación de la identidad y la diversidad cultural llevando el mensaje de que Dios no tiene forma especifica, tambien se utilizo vestuario blanco que influye estándares de belleza y feminidad impura y resplandeciente. La imagen de Jesús ropa casual, adaptandola a la imagen de un hombre del común.</a> </p>
+                            <a class="h5 text-decoration-none" href=""> <p align="justify"> El director de arte rompe esterotipos dando un aspecto a Dios con una mujer afroamericana, una manifestación de la identidad y la diversidad cultural llevando el mensaje de que Dios no tiene forma especifica, tambien se utilizo vestuario blanco que influye estándares de belleza y feminidad impura y resplandeciente. La imagen de Jesús ropa casual, adaptandola a la imagen de un hombre del común.</p></a> 
                             <div class="border-top mt-4 pt-4">
                                 <div class="d-flex justify-content-between">
                                     <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>/ 10</small></h6>
@@ -305,7 +305,7 @@
                             </div>
                             <a class="h5 text-decoration-none" href=""> <p align="justify"> La producción se rodo en el área de Stawamus Chief Park y Chilliwack, Columbia Británica. Los 2 set principales la cabaña y la choza, tienen una sensación de verdadera serenidad. <br><br>
 								
-								Ese nivel de atención al detalle y de sensibilidad, es un claro ejemplo de un mundo  protegido por papá, así que tenía que dar la sensación de ser abierto y espacioso, un lugar en el que no hay barreras y donde se transmitiera una sensación de verdadero cariño.</a> </p>
+								Ese nivel de atención al detalle y de sensibilidad, es un claro ejemplo de un mundo  protegido por papá, así que tenía que dar la sensación de ser abierto y espacioso, un lugar en el que no hay barreras y donde se transmitiera una sensación de verdadero cariño.</a></p>
                             <div class="border-top mt-4 pt-4">
                                 <div class="d-flex justify-content-between">
                                     <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>/ 10</small></h6>
@@ -340,7 +340,7 @@
                             <div class="d-flex justify-content-between mb-3">
                                 <small class="m-0"><span class="material-symbols-outlined"> theater_comedy </span> UTILERIA</small>    
                             </div>
-                            <a class="h5 text-decoration-none" href=""> <p align="justify"> En el departamento de arte hay un profesional imprescindible: el utilero de cine. Se encarga de asistir a los actores y actrices y se encarga de los elementos de la escenografía, cuidando que todo esté en su sitio en el momento preciso. En el departamento de arte hay un profesional imprescindible: el utilero de cine. Se encarga de asistir a los/as actores y actrices y se encarga de los elementos de la escenografía, cuidando que todo esté en su sitio en el momento preciso.</a> </p>
+                            <a class="h5 text-decoration-none" href=""> <p align="justify"> En el departamento de arte hay un profesional imprescindible: el utilero de cine. Se encarga de asistir a los actores y actrices y se encarga de los elementos de la escenografía, cuidando que todo esté en su sitio en el momento preciso. En el departamento de arte hay un profesional imprescindible: el utilero de cine. Se encarga de asistir a los/as actores y actrices y se encarga de los elementos de la escenografía, cuidando que todo esté en su sitio en el momento preciso.</a></p>
                             <div class="border-top mt-4 pt-4">
                                 <div class="d-flex justify-content-between">
                                     <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>/ 10</small></h6>
@@ -358,7 +358,7 @@
                             <div class="d-flex justify-content-between mb-3">
                                 <small class="m-0"><span class="material-symbols-outlined"> photo_camera </span> FOTOGRAFIA</small>   
                             </div>
-                            <a class="h5 text-decoration-none" href="">Filmar una película siempre te tiene ocupado y no hay tiempo suficiente para hacer todo lo que queres hacer, por lo que siempre estás trabajando en compromisos creativos para alcanzar tu objetivo dentro de tu presupuesto, pero tuve un gran elenco y un equipo técnico que lo hizo más fácil, estábamos filmando en muchos hermosos lugares alrededor de Vancouver, por lo que fue inspirador, es una manera diferente de mirar la vida y la fe.</a> </p>
+                            <a class="h5 text-decoration-none" href=""> <p align="justify"> Filmar una película siempre te tiene ocupado y no hay tiempo suficiente para hacer todo lo que queres hacer, por lo que siempre estás trabajando en compromisos creativos para alcanzar tu objetivo dentro de tu presupuesto, pero tuve un gran elenco y un equipo técnico que lo hizo más fácil, estábamos filmando en muchos hermosos lugares alrededor de Vancouver, por lo que fue inspirador, es una manera diferente de mirar la vida y la fe.</a></p>
                             <div class="border-top mt-4 pt-4">
                                 <div class="d-flex justify-content-between">
                                     <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>/ 10</small></h6>
@@ -375,7 +375,7 @@
                             <div class="d-flex justify-content-between mb-3">
                                  <small class="m-0"><span class="material-symbols-outlined"> settings_cinematic_blur </span> EFECTOS ESPECIALES</small>   
                             </div>
-                            <a class="h5 text-decoration-none" href="">Los efectos especiales son las técnicas y elementos usados en el sector audiovisual para crear realidades, ambientes o personajes que no existen y que o bien no pueden producirse o bien no pueden grabarse “físicamente” en la vida real. Estos efectos de ilusionismo se crean durante un proceso llamado postproducción, que permite editar y modificar todo lo grabado durante la producción y el rodaje.</a></p>
+                            <a class="h5 text-decoration-none" href=""> <p align="justify"> Los efectos especiales son las técnicas y elementos usados en el sector audiovisual para crear realidades, ambientes o personajes que no existen y que o bien no pueden producirse o bien no pueden grabarse “físicamente” en la vida real. Estos efectos de ilusionismo se crean durante un proceso llamado postproducción, que permite editar y modificar todo lo grabado durante la producción y el rodaje.</a></p>
                             <div class="border-top mt-4 pt-4">
                                 <div class="d-flex justify-content-between">
                                     <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>/ 10</small></h6>
