--- a/arte.html
+++ b/arte.html
@@ -256,7 +256,7 @@
                             <div class="d-flex justify-content-between mb-3">
                                 <small class="m-0"><span class="material-symbols-outlined"> photo_camera </span> FOTOGRAFIA</small>   
                             </div>
-                            <a class="h5 text-decoration-none" href="">Filmar una película siempre te tiene ocupado y no hay tiempo suficiente para hacer todo lo que queres hacer, por lo que siempre estás trabajando en compromisos creativos para alcanzar tu objetivo dentro de tu presupuesto, pero tuve un gran elenco y un equipo técnico que lo hizo más fácil, estábamos filmando en muchos hermosos lugares alrededor de Vancouver, por lo que fue inspirador, es una manera diferente de mirar la vida y la fe.</p></a> 
+                            <a class="h5 text-decoration-none" href=""> <p align="justify"> Filmar una película siempre te tiene ocupado y no hay tiempo suficiente para hacer todo lo que queres hacer, por lo que siempre estás trabajando en compromisos creativos para alcanzar tu objetivo dentro de tu presupuesto, pero tuve un gran elenco y un equipo técnico que lo hizo más fácil, estábamos filmando en muchos hermosos lugares alrededor de Vancouver, por lo que fue inspirador, es una manera diferente de mirar la vida y la fe.</p></a> 
                             <div class="border-top mt-4 pt-4">
                                 <div class="d-flex justify-content-between">
                                     <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>/ 10</small></h6>
@@ -273,7 +273,7 @@
                             <div class="d-flex justify-content-between mb-3">
                                  <small class="m-0"><span class="material-symbols-outlined"> settings_cinematic_blur </span> EFECTOS ESPECIALES</small>   
                             </div>
-                            <a class="h5 text-decoration-none" href="">Los efectos especiales son las técnicas y elementos usados en el sector audiovisual para crear realidades, ambientes o personajes que no existen y que o bien no pueden producirse o bien no pueden grabarse “físicamente” en la vida real. Estos efectos de ilusionismo se crean durante un proceso llamado postproducción, que permite editar y modificar todo lo grabado durante la producción y el rodaje.</p></a> 
+                            <a class="h5 text-decoration-none" href=""> <p align="justify"> Los efectos especiales son las técnicas y elementos usados en el sector audiovisual para crear realidades, ambientes o personajes que no existen y que o bien no pueden producirse o bien no pueden grabarse “físicamente” en la vida real. Estos efectos de ilusionismo se crean durante un proceso llamado postproducción, que permite editar y modificar todo lo grabado durante la producción y el rodaje.</p></a> 
                             <div class="border-top mt-4 pt-4">
                                 <div class="d-flex justify-content-between">
                                     <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>/ 10</small></h6>
