--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                             <div class="d-flex justify-content-between mb-3">
                                 <small class="m-0"><span class="material-symbols-outlined"> apparel </span> VESTUARIO</small>    
                             </div>
-                            <a class="h5 text-decoration-none" href=""> <p align="justify"> El director de arte rompe esterotipos dando un aspecto a Dios con una mujer afroamericana, una manifestación de la identidad y la diversidad cultural llevando el mensaje de que Dios no tiene forma especifica, tambien se utilizo vestuario blanco que influye estándares de belleza y feminidad impura y resplandeciente. La imagen de Jesús ropa casual, adaptandola a la imagen de un hombre del común.</p></a> 
+                            <a class="h5 text-decoration-none" href=""> <p align="justify"> El director de arte rompe esterotipos dando un aspecto a Dios con una mujer afroamericana, una manifestación de la identidad y la diversidad cultural llevando el mensaje de que Dios no tiene forma especifica, tambien se utilizo vestuario blanco que influye estándares de belleza y feminidad impura y resplandeciente. La imagen de Jesús ropa casual, adaptandola a la imagen de un hombre del común.</a></p>
                             <div class="border-top mt-4 pt-4">
                                 <div class="d-flex justify-content-between">
                                     <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>/ 10</small></h6>
