--- a/personajes.html
+++ b/personajes.html
@@ -175,7 +175,7 @@
                 <div class="text-center pb-4">
                     <img class="img-fluid mx-auto" src="img/img28.jpg" style="width: 100px; height: 100px;" >
                     <div class="testimonial-text bg-white p-4 mt-n5">
-                        <p class="mt-5">Representa al estudiante o discípulo espiritual. Se trata de alguien que conoce el Sendero espiritual, pero pasa por una crisis de Fe, ya que el dolor por la pérdida de su hija le ha llevado a desconectarse de lo Divino.
+                        <p class="mt-5" align="justify">Representa al estudiante o discípulo espiritual. Se trata de alguien que conoce el Sendero espiritual, pero pasa por una crisis de Fe, ya que el dolor por la pérdida de su hija le ha llevado a desconectarse de lo Divino.
                         </p>
                         <h5 class="text-white"><span class="text-primary">MACK:</span></h5>
                         <span>Discípulo espiritual</span>
@@ -185,7 +185,7 @@
                 <div class="text-center">
                     <img class="img-fluid mx-auto" src="img/img32.jpg" style="width: 100px; height: 100px;" >
                     <div class="testimonial-text bg-white p-4 mt-n5">
-                        <p class="mt-5">La esposa de Mack es una estudiante espiritual avanzada. Ella sufre la misma pérdida que Mack, pero no por ello pierde su fe en Dios. También de ella, Papá expresa tenerle un cariño especial.
+                         <p class="mt-5" align="justify">La esposa de Mack es una estudiante espiritual avanzada. Ella sufre la misma pérdida que Mack, pero no por ello pierde su fe en Dios. También de ella, Papá expresa tenerle un cariño especial.
                         </p>
                         <h5 class="text-white"><span class="text-primary">NAN</span></h5>
                         <span>Discípula espiritual avanzada</span>
@@ -195,7 +195,7 @@
                 <div class="text-center">
                     <img class="img-fluid mx-auto" src="img/img34.jpg" style="width: 100px; height: 100px;" >
                     <div class="testimonial-text bg-white p-4 mt-n5">
-                        <p class="mt-5">Missy significa “miel de abeja”, alimento espiritual. Ella simboliza la confianza en Dios, la Pureza y la conexión con los Divino. Estos son los aspectos de sí mismo que Mack pierde y que debe recuperar a través del Perdón.
+                         <p class="mt-5" align="justify">Missy significa “miel de abeja”, alimento espiritual. Ella simboliza la confianza en Dios, la Pureza y la conexión con los Divino. Estos son los aspectos de sí mismo que Mack pierde y que debe recuperar a través del Perdón.
                         </p>
                         <h5 class="text-white"><span class="text-primary">KATE, JOSH Y MISSY</span></h5>
                         <span>Aspectos de Mack</span>
@@ -205,7 +205,7 @@
                 <div class="text-center">
                     <img class="img-fluid mx-auto" src="img/img27.jpg" style="width: 100px; height: 100px;" >
                     <div class="testimonial-text bg-white p-4 mt-n5">
-                        <p class="mt-5">Dios en el aspecto Padre-Madre (se muestra como mujer y es llamada papá). Representa a la Presencia Yo Soy.
+                         <p class="mt-5" align="justify">Dios en el aspecto Padre-Madre (se muestra como mujer y es llamada papá). Representa a la Presencia Yo Soy.
                         </p>
                         <h5 class="text-white"><span class="text-primary">ADONAY (PAPÁ)</span></h5>
                         <span>Dios Presencia</span>
@@ -215,7 +215,7 @@
 				<div class="text-center">
                     <img class="img-fluid mx-auto" src="img/img31.jpg" style="width: 100px; height: 100px;" >
                     <div class="testimonial-text bg-white p-4 mt-n5">
-                        <p class="mt-5">Dios en el aspecto Hijo. Simboliza al Cristo Interno.
+                         <p class="mt-5" align="justify">Dios en el aspecto Hijo. Simboliza al Cristo Interno.
                         </p>
                         <h5 class="text-white"><span class="text-primary">JESÚS</span></h5>
                         <span>Hijo de Dios Cristo</span>
@@ -225,7 +225,7 @@
 				<div class="text-center">
                     <img class="img-fluid mx-auto" src="img/img29.jpg" style="width: 100px; height: 100px;" >
                     <div class="testimonial-text bg-white p-4 mt-n5">
-                        <p class="mt-5">Dios en el aspecto Espíritu Santo. Representa la Vida en la forma, el Fuego Creador de Vida. El nombre “Sarayu” significa “viento común”, o sea, Santo Aliento. Ella recoge las “lágrimas” símbolo de las experiencias de vida.
+                        <p class="mt-5" align="justify">Dios en el aspecto Espíritu Santo. Representa la Vida en la forma, el Fuego Creador de Vida. El nombre “Sarayu” significa “viento común”, o sea, Santo Aliento. Ella recoge las “lágrimas” símbolo de las experiencias de vida.
                         </p>
                         <h5 class="text-white"><span class="text-primary">SARAYU</span></h5>
                         <span>Aspecto Espíritu Santo La Vida</span>
@@ -235,7 +235,7 @@
 				<div class="text-center">
                     <img class="img-fluid mx-auto" src="img/img33.jpg" style="width: 100px; height: 100px;" >
                     <div class="testimonial-text bg-white p-4 mt-n5">
-                        <p class="mt-5">Es una Maestra Ascendida, relacionada con las cualidades de Sabiduría y Verdad, por lo que podría ser considerada como la Maestra Ascendida Pallas Atenea, Diosa de la Verdad y miembro del Tribunal Kármico. Recibe a Mack en una cueva, símbolo de interiorización y de profundización.
+                         <p class="mt-5" align="justify">Es una Maestra Ascendida, relacionada con las cualidades de Sabiduría y Verdad, por lo que podría ser considerada como la Maestra Ascendida Pallas Atenea, Diosa de la Verdad y miembro del Tribunal Kármico. Recibe a Mack en una cueva, símbolo de interiorización y de profundización.
                         </p>
                         <h5 class="text-white"><span class="text-primary">SABIDURÍA</span></h5>
                         <span>Maestra Ascendida</span>
