--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                         <img class="img-fluid" src="img/img14.jpg" alt="">
                         <a class="destination-overlay text-white text-decoration-none" href="">
                             <h5 class="text-white">Metafísica</h5>
-                            <span>fantástico pero verdadero</span>
+                            <span>Fantástico, pero verdadero</span>
                         </a>
                     </div>
                 </div>
@@ -422,7 +422,7 @@
                         <img class="img-fluid" src="img/img15.jpg" alt="">
                         <a class="destination-overlay text-white text-decoration-none" href="">
                             <h5 class="text-white">Dios siempre está</h5>
-                            <span>aunque no se da cuenta</span>
+                            <span>Aunque no se da cuenta</span>
                         </a>
                     </div>
                 </div>
@@ -431,8 +431,8 @@
                     <div class="destination-item position-relative overflow-hidden mb-2">
                         <img class="img-fluid" src="img/img13.jpg" alt="">
                         <a class="destination-overlay text-white text-decoration-none" href="">
-                            <h5 class="text-white">El Llamado Divino</h5>
-                            <span>la ayuda está disponible</span>
+                            <h5 class="text-white">El llamado Divino</h5>
+                            <span>La ayuda está disponible</span>
                         </a>
                     </div>
                 </div>
@@ -442,7 +442,7 @@
                         <img class="img-fluid" src="img/img22.jpg" alt="">
                         <a class="destination-overlay text-white text-decoration-none" href="">
                             <h5 class="text-white">Contacto con Dios</h5>
-                            <span>la divinidad </span>
+                            <span>La divinidad </span>
                         </a>
                     </div>
                 </div>
@@ -452,7 +452,7 @@
                         <img class="img-fluid" src="img/img18.jpg" alt="">
                         <a class="destination-overlay text-white text-decoration-none" href="">
                             <h5 class="text-white">Restaurar la relación con Dios</h5>
-                            <span>las Leyes de la Vida</span>
+                            <span>Las Leyes de la vida</span>
                         </a>
                     </div>
                 </div>
@@ -462,7 +462,7 @@
                         <img class="img-fluid" src="img/img19.jpg" alt="">
                         <a class="destination-overlay text-white text-decoration-none" href="">
                             <h5 class="text-white">Restaurar la relación consigo mismo</h5>
-                            <span>jardín de la consciencia</span>
+                            <span>Jardín de la consciencia</span>
                         </a>
                     </div>
                 </div>
@@ -471,8 +471,8 @@
                     <div class="destination-item position-relative overflow-hidden mb-2">
                         <img class="img-fluid" src="img/img17.jpg" alt="">
                         <a class="destination-overlay text-white text-decoration-none" href="">
-                            <h5 class="text-white">Restaurar la Fe en Dios</h5>
-                            <span>no está sólo, Él siempre ha estado</span>
+                            <h5 class="text-white">Restaurar la Fé en Dios</h5>
+                            <span>No está sólo, él siempre ha estado</span>
                         </a>
                     </div>
                 </div>
@@ -480,8 +480,8 @@
                     <div class="destination-item position-relative overflow-hidden mb-2">
                         <img class="img-fluid" src="img/img20.jpg" alt="">
                         <a class="destination-overlay text-white text-decoration-none" href="">
-                            <h5 class="text-white">Restaurar la relación con los demás.</h5>
-                            <span>símbolo de interiorización</span>
+                            <h5 class="text-white">Restaurar la relación con los demás</h5>
+                            <span>Símbolo de interiorización</span>
                         </a>
                     </div>
                 </div>
@@ -490,7 +490,7 @@
                         <img class="img-fluid" src="img/img21.jpg" alt="">
                         <a class="destination-overlay text-white text-decoration-none" href="">
                             <h5 class="text-white">El Perdón</h5>
-                            <span>el interior de cada ser humano es Luz</span>
+                            <span>El interior de cada ser humano es luz</span>
                         </a>
                     </div>
                 </div>
@@ -649,7 +649,7 @@
 <div class="container-fluid py-5">
         <div class="container pt-5 pb-3">
             <div class="text-center mb-3 pb-3">
-                <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">NOMBRE PELICULA</h6>
+                <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">La Cabaña</h6>
                 <h1>PREMIOS</h1>
             </div>
 			<div class="row"> 
