--- a/arte.html
+++ b/arte.html
@@ -110,7 +110,7 @@
                                 <a href="contexto.html" class="dropdown-item">Premios</a>
                                 <a href="contexto.html" class="dropdown-item">Secuelas</a>
                                 <a href="contexto.html" class="dropdown-item">Creadores</a>
-                                <a href="banda_sonora.html" class="dropdown-item">Banda sonora</a>
+                                <a href="bandasonora.html" class="dropdown-item">Banda sonora</a>
                             </div>
                         </div>
 						<a href="productora.html" class="nav-item nav-link">Productora</a>
