--- a/contexto.html
+++ b/contexto.html
@@ -105,7 +105,7 @@
                                 <a href="contexto.html#premios" class="dropdown-item">Premios</a>
                                 <a href="contexto.html#secuelas" class="dropdown-item">Secuelas</a>
                                 <a href="contexto.html#creadores" class="dropdown-item">Creadores</a>
-                                <a href="bandasonora.html" class="dropdown-item">Banda sonora</a>
+                                <a href="Bandasonora.html" class="dropdown-item">Banda sonora</a>
                             </div>
                         </div>
 						<a href="productora.html" class="nav-item nav-link">Productora</a>
