--- a/contexto.html
+++ b/contexto.html
@@ -101,11 +101,11 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Contexto</a>
                             <div class="dropdown-menu border-0 rounded-0 m-0">
-                                <a href="contexto.html#escena" class="dropdown-item">Escenas</a>
+                                <a href="contexto.html#escenas" class="dropdown-item">Escenas</a>
                                 <a href="contexto.html#premios" class="dropdown-item">Premios</a>
                                 <a href="contexto.html#secuelas" class="dropdown-item">Secuelas</a>
                                 <a href="contexto.html#creadores" class="dropdown-item">Creadores</a>
-                                <a href="bandasonora.html" class="dropdown-item">Banda sonora</a>
+                                <a href="banda sonora.html" class="dropdown-item">Banda sonora</a>
                             </div>
                         </div>
 						<a href="productora.html" class="nav-item nav-link">Productora</a>
