--- a/contexto.html
+++ b/contexto.html
@@ -101,7 +101,7 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Contexto</a>
                             <div class="dropdown-menu border-0 rounded-0 m-0">
-                                <a href="contexto.html#escenas" class="dropdown-item">Escenas</a>
+                                <a href="contexto.html#escena" class="dropdown-item">Escenas</a>
                                 <a href="contexto.html#premios" class="dropdown-item">Premios</a>
                                 <a href="contexto.html#secuelas" class="dropdown-item">Secuelas</a>
                                 <a href="contexto.html#creadores" class="dropdown-item">Creadores</a>
@@ -533,6 +533,7 @@
 	
 	<!-- BANNER BANDA SONORA Start -->
 
+	<div id="banda sonora"> </div>
     <div class="" style="margin: 90px 0;">
 		 
         <div class="container py-5">
