--- a/contexto.html
+++ b/contexto.html
@@ -105,7 +105,7 @@
                                 <a href="contexto.html#premios" class="dropdown-item">Premios</a>
                                 <a href="contexto.html#secuelas" class="dropdown-item">Secuelas</a>
                                 <a href="contexto.html#creadores" class="dropdown-item">Creadores</a>
-                                <a href="banda_sonora.html" class="dropdown-item">Banda sonora</a>
+                                <a href="bandasonora.html" class="dropdown-item">Banda sonora</a>
                             </div>
                         </div>
 						<a href="productora.html" class="nav-item nav-link">Productora</a>
@@ -533,7 +533,7 @@
 	
 	<!-- BANNER BANDA SONORA Start -->
 
-	<div id="banda_sonora"> </div>
+	<div id="bandasonora"> </div>
     <div class="" style="margin: 90px 0;">
 		 
         <div class="container py-5">
