--- a/Bandasonora_sobre_espiritualidad.html
+++ b/Bandasonora_sobre_espiritualidad.html
@@ -4,10 +4,10 @@
 <!-- INICIO HEAD / INFORMACIÓN GENERAL (METADATOS): TÍTULO, ENLACES A SCRIPTS Y HOJAS DE ESTILOS -->
 <head>
     <meta charset="utf-8">
-    <title>CONTEXTO</title>
+    <title>DESBLOQUEA TU POTENCIAL EN ESTA TRAVESIA TRANSFORMADORA DE MACK A TRAVÉS DE LA PELICULA LA CABAÑA</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta name="description" content="Página de caracter académico, en donde se aplica el manejo del HTML">
-    
+    <meta name="description" content="Vive la travesia transformadora al interior del ser a través del espejo de Mack, en donde comprenderemos y reconoceremos la virtud del perdón y la liberación">
+    <meta name="keywords" content="Pelicula, perdón, transformación, sufrimiento, paz, alegria, reconocer, Makc, Adonai, espiritu santo, Yo, ser, espiritualidad, pelicula familiar">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -123,7 +123,7 @@
         <div id="header-carousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                      <img class="w-100" src="img/Img05.jpg" alt="Image">
+                      <img class="w-100" src="img/Personaje_acompañado_de_Dios.jpg" alt="Personaje_acompañado_de_Dios_en_contexto_mistico">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h4 class="text-white text-uppercase mb-md-3">Un viaje al Interior de:</h4>
@@ -134,7 +134,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                      <img class="w-100" src="img/Img04.jpg" alt="Image">
+                      <img class="w-100" src="img/Personaje_mirando_el_lugar_de_transformación.jpg" alt="Personaje_mirando_el_lugar_de_transformación_del_ser">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h4 class="text-white text-uppercase mb-md-3">Un viaje al Interior de:</h4>
@@ -171,7 +171,7 @@
     <div class="" style="margin: 90px 0;">
 		 
         <div class="container py-5">
-			<img class="w-100" src="img/img46.jpg" alt="Image">
+			<img class="w-100" src="img/Portada_banda_sonora.jpg" alt="Portada_banner_banda_sonora_Youtube">
 			<br><br>
             <div class="row align-items-center">
                 <div class="col-lg-7 mb-5 mb-lg-0">
